Fix display/margin issue for smaller devices (re: stretching to left side of screen)

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -30,7 +30,7 @@
 /* Mobile and tablet styles: */
 @media only screen and (max-width: 1023px) {
   .user-profile {
-    width: 100vw;
+    width: 100%;
   }
 }
 
