--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -37,6 +37,6 @@ main {
   main {
     display: flex;
     justify-content: center;
-    margin: 2rem;
+    margin: auto;
   }
 }
